# WebCraft

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Doxyfile  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml  build.yml  cmake-multi-platform.yml
docs/: CNAME
docs/html/: README_8md.html  adaptors_8hpp.html  adaptors_8hpp.js  adaptors_8hpp__dep__incl.map  adaptors_8hpp__dep__incl.md5  adaptors_8hpp__incl.map  adaptors_8hpp__incl.md5  adaptors_8hpp_source.html  annotated.html  annotated_dup.js  application_8hpp.html  application_8hpp__incl.map  application_8hpp__incl.md5  application_8hpp_source.html  async_2README_8md.html  async_2io_2README_8md.html  async_8hpp.html  async_8hpp.js  async_8hpp__dep__incl.map  async_8hpp__dep__incl.md5  async_8hpp__incl.map  async_8hpp__incl.md5  async_8hpp_source.html  async__event_8hpp.html  async__event_8hpp.js  async__event_8hpp__dep__incl.map  async__event_8hpp__dep__incl.md5  async__event_8hpp__incl.map  async__event_8hpp__incl.md5  async__event_8hpp_source.html  async__generator_8hpp.html  async__generator_8hpp.js  async__generator_8hpp__dep__incl.map  async__generator_8hpp__dep__incl.md5  async__generator_8hpp__incl.map  async__generator_8hpp__incl.md5  async__generator_8hpp_source.html  awaitable_8hpp.html  awaitable_8hpp.js  awaitable_8hpp__dep__incl.map  (+435 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  (+54 more)
docs/latex/: README_8md.tex  adaptors_8hpp.tex  adaptors_8hpp__dep__incl.md5  adaptors_8hpp__incl.md5  adaptors_8hpp_source.tex  annotated.tex  application_8hpp.tex  application_8hpp__incl.md5  application_8hpp_source.tex  async_2README_8md.tex  async_2io_2README_8md.tex  async_8hpp.tex  async_8hpp__dep__incl.md5  async_8hpp__incl.md5  async_8hpp_source.tex  async__event_8hpp.tex  async__event_8hpp__dep__incl.md5  async__event_8hpp__incl.md5  async__event_8hpp_source.tex  async__generator_8hpp.tex  async__generator_8hpp__dep__incl.md5  async__generator_8hpp__incl.md5  async__generator_8hpp_source.tex  awaitable_8hpp.tex  awaitable_8hpp__dep__incl.md5  awaitable_8hpp__incl.md5  awaitable_8hpp_source.tex  classcppcoro_1_1async__generator.tex  classcppcoro_1_1generator.tex  classwebcraft_1_1async_1_1event__signal.tex  classwebcraft_1_1async_1_1event__signal__coll__graph.md5  classwebcraft_1_1async_1_1fire__and__forget__task.tex  classwebcraft_1_1async_1_1fire__and__forget__task_1_1promise__type.tex  classwebcraft_1_1async_1_1immovable.tex  classwebcraft_1_1async_1_1immovable__inherit__graph.md5  classwebcraft_1_1async_1_1io_1_1fs_1_1file.tex  classwebcraft_1_1async_1_1io_1_1fs_1_1file__rstream.tex  classwebcraft_1_1async_1_1io_1_1fs_1_1file__rstream__coll__graph.md5  classwebcraft_1_1async_1_1io_1_1fs_1_1file__wstream.tex  classwebcraft_1_1async_1_1io_1_1fs_1_1file__wstream__coll__graph.md5  (+160 more)
examples/: CMakeLists.txt
examples/http_server/: README.md  config.cpp  config.hpp  main.cpp  server.conf
include/webcraft/: concepts.hpp  ranges.hpp  webcraft.hpp
include/webcraft/async/: README.md  async.hpp  async_event.hpp  async_generator.hpp  asyncruntime.md  awaitable.hpp  event_signal.hpp  executors.hpp  fire_and_forget_task.hpp  generator.hpp  io.hpp  platform.hpp  runtime.hpp  runtime.linux.hpp  runtime.macos.hpp  runtime.win32.hpp  streams.hpp  sync_wait.hpp  task.hpp  task_completion_source.hpp  thread_pool.hpp  timer_service.hpp  when_all.hpp  when_any.hpp
include/webcraft/async/io/: README.md  adaptors.hpp  core.hpp  fs.hpp  io.hpp  io_service.hpp  socket.hpp  stream.hpp
include/webcraft/async/linux/: runtime.hpp
include/webcraft/async/runtime/: event.hpp  linux.event.hpp  macos.event.hpp  provider.hpp  runtime.hpp  windows.event.hpp
include/webcraft/async/runtime/windows/: windows_timer_manager.hpp
include/webcraft/async/windows/: windows_timer_manager.hpp
include/webcraft/concurrency/: queue.hpp
include/webcraft/http/: application.hpp
include/webcraft/net/: util.hpp
include/webcraft/web/: README.md  application.hpp  client.hpp  core.hpp
ports/webcraft/: portfile.cmake  vcpkg.json
src/: main.cpp
src/webcraft/: async_file_io.cpp  async_tcp_listener.cpp  async_tcp_socket.cpp  async_tcp_socket_decl.hpp  async_udp.cpp  executors.cpp  fs.cpp  io.cpp  runtime.cpp  runtime.macos.cpp  runtime.provider.cpp  runtime.provider.linux.cpp  runtime.provider.macos.cpp  runtime.provider.windows.cpp  runtime_utils.cpp  socket.cpp  timers.cpp  web.cpp
tests/: CMakeLists.txt
tests/include/: basic.hpp  mock_io.hpp  test_suite.hpp
tests/src/: test_async_io_adaptors.cpp  test_async_io_core.cpp  test_async_io_fs.cpp  test_async_io_multicast.cpp  test_async_io_new_socket.cpp  test_async_io_socket.cpp  test_basic.cpp  test_basic_socket.cpp  test_fs.cpp  test_generator.cpp  test_kqueue_scheduler.cpp  test_ranges.cpp  test_runtime.cpp  test_socket.cpp  test_stdexec.cpp  test_task.cpp  test_task_completion_source.cpp  test_thread_pool.cpp  test_web.cpp  test_windows_socket.cpp
tests/src/linux/: test_io_uring_ops.cpp
tests/src/mac/: test_kqueue_ops.cpp
tests/src/windows/: test_iocp_ops.cpp
